2007-10-17	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * examples/testapp.cs
    * src/libcapuchin/DownloadManager.cs
    * src/libcapuchin/AppObject.cs:
    Show download status when downloading repository's XML file
    Changed name of Refresh method to Update
    Changed name of Update method to Install
    Changed name of event Updated to InstallFinished
    Changed name of event InstallationStatus to Status and changed its parameters
    Added ActionType enum

2007-10-16	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * doc/repository.rng:
    * src/libcapuchin/Repository.cs:
    Added changelog element to XML schema

2007-10-08	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* examples/testapp.cs:
	* src/libcapuchin/Capuchin.cs:
	* src/libcapuchin/DownloadManager.cs:
	* src/libcapuchin/AppObject.cs:
	* src/libcapuchin/Downloaders/AbstractDownloader.cs:
	* src/libcapuchin/Downloaders/HttpDownlaoder.cs:
	* src/libcapuchin/Downloaders/FtpDownloader.cs:
	Renamed DownloadStatus signal to InstallationStatus.
	It contains plugin id, action, progress and speed.
	Implemented measurement of download speed for HTTP downloads.	
	
2007-10-08	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* src/capuchin/Main.cs:
	Createa .capuchin dir before initializing logging

2007-10-05	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * src/libcapuchin/Logging/
    * src/libcapuchin/Makefile.am
    * src/libcapuchin/AppObject.cs
    * src/libcapuchin/Globals.cs.in
    * src/libcapuchin/Capuchin.cs
    * src/capuchin/Main.cs:
    Added logging framework from beagle

2007-10-05	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * doc/repository.rng:
    Added RelaxNG schema definition

2007-10-05	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * configure.ac
    * Makefile.am
    * specs/
    * src/libcapuchin/Repository.cs
    * src/libcapuchin/ConfParser.cs
    * src/libcapuchin/Makefile.am
    * src/libcapuchin/AppObject.cs
    * src/libcapuchin/Capuchin.cs:
    Get rid of specs file.